--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "through2": "^2.0.0",
     "yamljs": "^0.2.3",
     "yargs": "^3.15.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.5"
   }
 }
