--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "yargs": "^3.15.0"
   },
   "dependencies": {
-    "bootstrap": "^3.3.5"
+    "bootstrap": "^3.3.5",
+    "jquery": "^2.1.4"
   }
 }
