--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "me",
-  "version": "0.0.1",
+  "description": "Personal website for Joe Mercer",
+  "version": "0.2.0",
+  "author": "Joe Mercer",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joemercer/me.git",
   "devDependencies": {
     "babelify": "^6.1.3",
     "better-console": "^0.2.4",
