--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "map-stream": "0.0.6",
     "marked": "~0.3.3",
     "require-dot-file": "^0.4.0",
+    "run-sequence": "^1.1.2",
     "semantic-ui": "^2.0.7",
     "through2": "^2.0.0",
     "yamljs": "^0.2.3",
